--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#BD00C45F</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorButton">#008A3C</color>
+    <color name="background">#C38BC34A</color>
 </resources>
