--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -15,7 +15,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_bias="0.561" />
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/app_toolbar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
