--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -4,7 +4,7 @@
 
 
 
-    <!-- "Mark Favorite", should appear as action button if possible -->
+
     <item
         android:id="@+id/action_search"
         android:icon="@drawable/search"
@@ -12,9 +12,13 @@
         app:showAsAction="ifRoom"></item>
 
 
-    <!-- Settings, should always be in the overflow -->
+
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
+        app:showAsAction="never"></item>
+
+    <item android:id="@+id/action_favorite"
+        android:title="@string/action_favorite"
         app:showAsAction="never"></item>
 
 
