--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -9,10 +9,12 @@
 
 
     <TextView
-        android:layout_width="318dp"
-        android:layout_height="39dp"
+        android:id="@+id/teaClicked"
+        android:layout_width="378dp"
+        android:layout_height="47dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:background="@android:color/background_light"
-        android:text="Black Tea"
         app:layout_constraintBottom_toTopOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.456"
@@ -51,7 +53,7 @@
         android:layout_width="325dp"
         android:layout_height="128dp"
         android:ems="10"
-        android:background="@color/cardview_shadow_start_color"
+        android:background="@color/background"
         android:hint="@string/description_BlackTea"
         android:inputType="textPersonName"
         tools:layout_editor_absoluteX="37dp"
@@ -61,7 +63,7 @@
         android:id="@+id/button5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/cardview_light_background"
+        android:backgroundTint="@color/background"
         android:text="Delete"
         tools:layout_editor_absoluteX="84dp"
         tools:layout_editor_absoluteY="567dp" />
