--- a/app/src/main/res/layout/activity_tea_type.xml
+++ b/app/src/main/res/layout/activity_tea_type.xml
@@ -7,6 +7,21 @@
     android:background="@color/background"
     tools:context=".TeaTypeActivity">
 
+
+    <TextView
+        android:id="@+id/teaTypeClicked"
+        android:layout_width="378dp"
+        android:layout_height="47dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:background="@android:color/background_light"
+        app:layout_constraintHorizontal_bias="0.066"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.318" />
+
     <ListView
         android:id="@+id/tealist"
         android:layout_width="371dp"
@@ -17,6 +32,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.573" />
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
