--- a/app/src/main/res/layout/activity_tea_type.xml
+++ b/app/src/main/res/layout/activity_tea_type.xml
@@ -45,5 +45,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/app_toolbar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
