--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,8 @@
     <color name="colorPrimary">#BD00C438</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorButton">#008A3C</color>
-    <color name="background">#C38BC34A</color>
+    <color name="background">#D3DFB8</color>
+    <color name="toolbar">#DCF763</color>
+    <color name="button1">#574D68</color>
+    <color name="button2">#AC3931</color>
 </resources>
