--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,17 +8,25 @@
     tools:context=".HomeActivity">
 
 
+    <FrameLayout
+        android:id="@+id/homeFrame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </FrameLayout>
+
     <ListView
-        android:id="@+id/listview"
-        android:layout_width="359dp"
-        android:layout_height="586dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    android:id="@+id/listview"
+    android:layout_width="359dp"
+    android:layout_height="586dp"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintVertical_bias="0.496" />
 
     <include
         android:id="@+id/toolbar"
-        layout="@layout/app_toolbar" />
+        layout="@layout/app_toolbar"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
