--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,17 +8,22 @@
     tools:context=".HomeActivity">
 
 
-    <ListView
-        android:id="@+id/listview"
-        android:layout_width="359dp"
-        android:layout_height="586dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:listitem="@layout/tea_item"
+        />
 
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/app_toolbar" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/button_add_tea"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_add"
+        android:foregroundGravity="bottom"
+        android:layout_margin="32dp"/>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
