--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,12 +1,16 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light">
+    <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorButton</item>
+        <item name="background">@color/background</item>
+        <item name="mainText">@color/mainText</item>
     </style>
-        <!-- Customize your theme here. -->
+
+
+        <!-- Toolbar theme -->
     <style name="ToolbarStyle" parent="Theme.AppCompat.Light">
         <item name="android:background">@color/toolbar</item>
     </style>
