--- a/app/src/main/res/layout/activity_add_tea.xml
+++ b/app/src/main/res/layout/activity_add_tea.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp"
+
     tools:context=".AddEditTeaActivity">
 
     <EditText
@@ -35,12 +35,17 @@
         android:text="Price"
         android:textAppearance="@android:style/TextAppearance.Medium"
         app:layout_constraintTop_toBottomOf="@+id/edit_text_description"
-        tools:layout_editor_absoluteX="16dp" />
+        tools:layout_editor_absoluteX="16dp"
+        tools:ignore="MissingConstraints" />
 
 
     <include
         android:id="@+id/toolbar"
-        layout="@layout/app_toolbar" />
+        layout="@layout/app_toolbar"
+        android:layout_width="412dp"
+        android:layout_height="51dp"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="2dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
