--- a/app/src/main/res/layout/activity_teas.xml
+++ b/app/src/main/res/layout/activity_teas.xml
@@ -11,9 +11,12 @@
         android:id="@+id/recycler_view"
         android:layout_width="413dp"
         android:layout_height="673dp"
+        android:layout_marginTop="2dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="-2dp"
-        tools:layout_editor_absoluteY="58dp"
         tools:listitem="@layout/tea_item" />
 
 
@@ -21,14 +24,18 @@
         android:id="@+id/button_add_tea"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
         android:foregroundGravity="bottom"
         android:src="@drawable/ic_add"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="177dp"
-        tools:layout_editor_absoluteY="646dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.954"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints" />
 
     <include
         android:id="@+id/toolbar"
-        layout="@layout/app_toolbar" />
+        layout="@layout/app_toolbar"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
