--- a/app/src/main/res/menu/category_menu.xml
+++ b/app/src/main/res/menu/category_menu.xml
@@ -21,5 +21,8 @@
         android:title="@string/action_favorite"
         app:showAsAction="never"></item>
 
+    <item android:id="@+id/action_delete_all_categories"
+        android:title="@string/action_delete_all_categories"
+        app:showAsAction="never"></item>
 
 </menu>
