--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/background"
     android:id="@+id/detailLayout"
-    tools:context=".MainActivity">
+    tools:context=".TeaActivity">
 
 
     <TextView
