--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -4,9 +4,9 @@
     <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorButton</item>
+        <item name="colorAccent">@color/colorAccent</item>
         <item name="background">@color/background</item>
-        <item name="textAppearanceBody1">@color/mainText</item>
+
     </style>
 
 
