--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background"
+    android:background="?attr/backgroundColor"
     tools:context=".CategoryActivity">
 
 
@@ -27,6 +27,7 @@
         layout="@layout/app_toolbar" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:background="?attr/backgroundColor"
         android:id="@+id/recycler_view"
         android:layout_width="wrap_content"
         android:layout_height="619dp"
