--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -4,13 +4,14 @@
     android:layout_height="wrap_content"
     android:layout_marginEnd="8dp"
     android:layout_marginStart="8dp"
-    android:layout_marginTop="8dp">
-
+    android:layout_marginTop="8dp"
+    android:background="?attr/backgroundColor">
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="8dp">
+        android:padding="8dp"
+        android:background="?attr/backgroundColor">
 
 
         <TextView
@@ -20,7 +21,8 @@
             android:layout_alignParentEnd="true"
             android:text="1"
             android:layout_alignParentRight="true"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textColor="?attr/textColor"/>
 
 
 
@@ -34,14 +36,16 @@
             android:layout_toStartOf="@id/text_view_id"
             android:layout_alignParentStart="true"
             android:layout_toLeftOf="@id/text_view_id"
-            android:layout_alignParentLeft="true" />
+            android:layout_alignParentLeft="true"
+            android:textColor="?attr/textColor"/>
 
             <TextView
                 android:id="@+id/text_view_virtues"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/text_view_name"
-                android:text="Virtues"/>
+                android:text="Virtues"
+                android:textColor="?attr/textColor"/>
 
     </RelativeLayout>
 
