--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-
-
-
+    <attr name="backgroundColor" format="color" />
+    <attr name="cardBackgroundColor" format="color" />
+   <attr name="textColor" format="color"/>
+    <attr name="buttoncolor" format="color"/>
+    <attr name="toolbarColor" format="color"/>
+    <!--<attr name="toolbarStyle" format="color"/> -->
+    <!--<attr name="tintMode" format="color"/> -->
 </resources>
