--- a/app/src/main/res/layout/activity_add_tea.xml
+++ b/app/src/main/res/layout/activity_add_tea.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".AddEditTeaActivity">
+    tools:context=".AddEditTeaActivity"
+    android:background="?attr/backgroundColor">
 
     <EditText
         android:id="@+id/edit_text_title"
@@ -15,7 +16,8 @@
         android:hint="Title"
         android:inputType="text"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        tools:layout_editor_absoluteX="16dp" />
+        tools:layout_editor_absoluteX="16dp"
+        android:textColor="?attr/textColor"/>
 
     <EditText
         android:id="@+id/edit_text_description"
@@ -25,7 +27,8 @@
         android:hint="Description"
         android:inputType="textMultiLine"
         app:layout_constraintTop_toBottomOf="@+id/edit_text_title"
-        tools:layout_editor_absoluteX="16dp" />
+        tools:layout_editor_absoluteX="16dp"
+        android:textColor="?attr/textColor"/>
 
     <EditText
         android:id="@+id/edit_text_origin"
@@ -35,7 +38,8 @@
         android:hint="Origin"
         android:inputType="textMultiLine"
         app:layout_constraintTop_toBottomOf="@+id/edit_text_description"
-        tools:layout_editor_absoluteX="16dp" />
+        tools:layout_editor_absoluteX="16dp"
+        android:textColor="?attr/textColor"/>
 
 
     <include
