--- a/app/src/main/res/layout/tea_item.xml
+++ b/app/src/main/res/layout/tea_item.xml
@@ -4,13 +4,15 @@
     android:layout_height="wrap_content"
     android:layout_marginEnd="8dp"
     android:layout_marginStart="8dp"
-    android:layout_marginTop="8dp">
+    android:layout_marginTop="8dp"
+    android:background="?attr/backgroundColor">
 
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="8dp">
+        android:padding="8dp"
+        android:background="?attr/backgroundColor">
 
         <TextView
             android:id="@+id/text_view_id"
@@ -19,7 +21,8 @@
             android:layout_alignParentEnd="true"
             android:text="1"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:layout_alignParentRight="true" />
+            android:layout_alignParentRight="true"
+            android:textColor="?attr/textColor"/>
 
         <TextView
             android:id="@+id/text_view_title"
@@ -31,7 +34,8 @@
             android:layout_toStartOf="@id/text_view_id"
             android:ellipsize="end"
             android:layout_alignParentLeft="true"
-            android:layout_toLeftOf="@id/text_view_id" />
+            android:layout_toLeftOf="@id/text_view_id"
+            android:textColor="?attr/textColor"/>
 
 
 
@@ -40,7 +44,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/text_view_title"
-            android:text="Description"/>
+            android:text="Description"
+            android:textColor="?attr/textColor"/>
 
 
 
